# book-manager

./: .gitignore  Cargo.toml  README.md  project-structure.txt  project_structure.text
scripts/: build_web.sh
web/: Cargo.toml  index.html
web/src/: lib.rs
