[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 2

[build-dependencies]
wasm-pack = "0.13.0"
